fixed code box scrollbars

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -117,7 +117,10 @@ pre {
 	padding:18px 18px;
 	font-size:0.923076923em; /*12/13*/
 	margin:14px 0 16px 0;
-	overflow:scroll;
+	overflow-x:auto;
+	-webkit-background-clip:padding-box;
+	-moz-background-clip:padding-box;
+	background-clip:padding-box;
 }
 
 code {
@@ -1501,7 +1504,7 @@ header.included_header h2 {
 	box-shadow:1px 1px 1px rgba(0,0,0,0.15), rgba(255,255,255,0.22) 1px 1px 0 inset;
     filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#BC0D13', EndColorStr='#720704');
 	font-size:1.230769231em;
-	-moz-background-clip:padding; 
+	-moz-background-clip:padding-box; 
 	-webkit-background-clip:padding-box; 
 	background-clip:padding-box;
 	line-height:21px;
